feat: working on update api
