# server/internal/api/deployments/service/deployment_service.go
@@ -146,3 +146,13 @@ func (service *DeploymentService) GetLatestStatusByIds(ids []string, ctx context
 	return deployments, nil
 
 }
+
+func ShouldRedeploy(updatedFieldMap map[string]interface{}) bool {
+	for k := range updatedFieldMap {
+		if k == "branch_name" || k == "root_dir" || k == "docker_file_path" {
+			return true
+		}
+	}
+	return false
+
+}
